tests/ValidPrograms/Test14/test14.c

int main() {
	char a,b;
	a = 'a';
	b = 'b';
	return 0;
}
