tests/SemanticError/Fonctions/Test6/ReturnConstant.c
char fonction(){
	return 200000;
}

int main(){
	int a;
	a=fonction();
	return a;
}


